--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "hpp": "^0.2.3"
+    "hpp": "^0.2.3",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
