--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.13.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -26,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
+    "@types/uuid": "^9.0.8",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
     "typescript": "^5.4.5"
